Resolves: fdo#73165 don't restart timer if already running

If the timer is already running and you restart it then it starts counting down
again so the timeout occasion just keeps getting pushed out indefinitely.

Change-Id: I907dcc20c6fb4a770deeebba459fe68c24a4ec98
Reviewed-on: https://gerrit.libreoffice.org/13792
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>